--- a/src/Scss/Liabrary/_footer.scss
+++ b/src/Scss/Liabrary/_footer.scss
@@ -1,74 +1,74 @@
 .rectangle {
     background-color: $gray-l1;
-    height: 4px;
-    margin-top: 128px;
+    height: .4rem;
+    margin-top: 12.8rem;
 }
 
 .main-footer {
-    padding-bottom: 32px;
+    padding-bottom: 3.2rem;
 
     ul {
-        padding-top: 16px;
+        padding-top: 1.6rem;
     }
 
     ul li {
         list-style-type: none;
         text-align: left;
-        font-size: 16px;
+        font-size: 1.6rem;
         color: $gray-3;
-        letter-spacing: 0px;
+        letter-spacing: 0rem;
         font-weight: normal;
     }
 
     img {
-        padding: 11px 5px 5px 0;
+        padding: 1.1rem .5rem .5rem 0;
     }
 
     .img1 {
-        width: 20px;
-        // height: 20px;
+        width: 2rem;
+        // height: 20rem;
     }
 
     .img2 {
-        width: 13px;
-        // height: 20px;
+        width: 1.3rem;
+        // height: 20rem;
     }
 
     .img3 {
-        width: 22px;
-        // height: 18px;
+        width: 2.2rem;
+        // height: 18rem;
     }
 
 
     .foot-head {
-        font-size: 16px;
+        font-size: 1.6rem;
         font-weight: 600;
         color:$col-black;
-        padding-top: 44px;
+        padding-top: 4.4rem;
         text-align: left;
 
     }
 }
 
 .sub-footer {
-    padding: 28px 0;
-    // border-top: 1px solid #00000033;
+    padding: 2.8rem 0;
+    // border-top: 1rem solid #00000033;
 
 
     ul li {
         display: inline;
         list-style-type: none;
         text-decoration: underline;
-        padding-left: 19px;
-        font-size: 14px;
+        padding-left: 1.9rem;
+        font-size: 1.4rem;
         color: $col-black;
-        font: normal normal normal 14px/18px Proxima Nova;
+        font: normal normal normal 1.4rem/1.8rem Proxima Nova;
     }
 
     .info {
         text-align: center;
-        font-style: normal normal normal 14px/18px Muli;
-        letter-spacing: 0px;
+        font-style: normal normal normal 1.4rem/1.8rem Muli;
+        letter-spacing: 0rem;
         color: $gray-3;
     }
 
@@ -80,7 +80,7 @@
 
 }
 
-@media (max-width: 768px) {
+@media (max-width: 76.8rem) {
     .sub-footer {
         .logo-align{
         text-align: center;
