--- a/src/Scss/Liabrary/_logo.scss
+++ b/src/Scss/Liabrary/_logo.scss
@@ -1,6 +1,6 @@
 .logo {
 
-    height: 27px;
+    height: 2.7rem;
 }
 
 .logo-align {
@@ -8,5 +8,5 @@
 }
 
 .phn-logo {
-    height: 18px;
+    height: 1.8rem;
 }
