--- a/src/Scss/Liabrary/_var.scss
+++ b/src/Scss/Liabrary/_var.scss
@@ -4,6 +4,7 @@ $col-white:#FFFFFF;
 $col-black:#172026;
 $col-offWhite:#F3F3F3;
 $col-Gray:#D1D3D6;
+$col-gray2:#B5B7BC;
 $col-dark-gray:#181C24;
 $col-off-purple:#AF52FF;
 $col-lavendor:#7950E8;
