--- a/src/Scss/Liabrary/_checkbox.scss
+++ b/src/Scss/Liabrary/_checkbox.scss
@@ -2,10 +2,10 @@
 .filter-container {
   display: block;
   position: relative;
-  padding-left: 35px;
-  margin-bottom: 12px;
+  padding-left: 3.5rem;
+  margin-bottom: 1.2rem;
   cursor: pointer;
-  font-size: 22px;
+  font-size: 2.2rem;
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
@@ -28,12 +28,12 @@
   position: absolute;
   top: 0;
   left: 0;
-  height: 24px;
-  width: 24px;
+  height: 2.4rem;
+  width: 2.4rem;
   background-color: $col-white;
-   border:2px solid $border-gray;
+   border:.2rem solid $border-gray;
    
-  border-radius:3px
+  border-radius:.3rem
 }
 
 // / On mouse-over, add a grey background color /
@@ -45,7 +45,7 @@
 .container input:checked ~ .checkmark {
   background-color: $col-white;
   border:solid $primary-brand;
-  border-width:2px;
+  border-width:.2rem;
   
   
   
@@ -67,14 +67,14 @@
 
 // / Style the checkmark/indicator /
 .filter-container .checkmark:after {
-  left: 13px;
-  top:-7px;
-  width: 4px;
-  height: 20px;
+  left: 1.3rem;
+  top:-.7rem;
+  width: .4rem;
+  height: 2rem;
   border: solid $primary-brand;
   z-index:2;
   
-  border-width: 0 2px 2px 0;
+  border-width: 0 .2rem .2rem 0;
   -webkit-transform: rotate(45deg);
   -ms-transform: rotate(45deg);
   transform: rotate(45deg);
