--- a/src/Scss/Liabrary/_color.scss
+++ b/src/Scss/Liabrary/_color.scss
@@ -8,25 +8,25 @@
     position: absolute;
     top: 0;
     left: 0;
-    width: 64px;
-    height: 40px;
+    width: 6.4rem;
+    height: 4rem;
     background-color: $col-red;
-    border: 2px solid $border-gray;
-    border-radius: 3px;
+    border: .2rem solid $border-gray;
+    border-radius: .3rem;
 }
 // / The container /
 .filter-container2 {
     
-  width: 60px;
-  height: 40px;
-  border-radius: 6px;
+  width: 6rem;
+  height: 4rem;
+  border-radius: .6rem;
   display: inline-flex;
-  margin-right: 2px;
-  //padding-bottom: 16px;
+  margin-right: .2rem;
+  //padding-bottom: 16rem;
   
   }
    .filter-color{
-    padding-bottom: 16px;
+    padding-bottom: 1.6rem;
    }
 
    .gradient{
