--- a/src/Scss/Liabrary/_heroBanner.scss
+++ b/src/Scss/Liabrary/_heroBanner.scss
@@ -1,33 +1,40 @@
 .header {
-    padding-top: 49px;
+    padding-top: 4.9rem;
 }
 
 .hero-container {
-    background-color: black;
+    background-color: $black-2;
     color: $col-white;
-    place-items: center;
-    padding: 85px;
-    font: normal normal 600 36px/42px Source Serif Pro;
+    justify-content: center;
+    padding: 9.5rem;
+    display:flex;
+    flex-direction: column;
+    height:30rem;
+
+   h1{ font: normal normal 600 3.6rem/4.2rem Source Serif Pro;}
 
 }
 
 .hero-image {
-    padding: 16px 0;
+    height: 30rem;
+    padding: 1.6rem 0;
     width: 100%;
 }
  .subheader {
     visibility: hidden;
-    font: normal normal 600 36px/42px Source Serif Pro;
+    font: normal normal 600 3.6rem/4.2rem Source Serif Pro;
 
 }
 
 .bar {
-    width: 102px;
-    height: 8px;
+    width: 10.2rem;
+    height: .8rem;
     background-color: $primary-brand;
+    margin: 0 auto;
+    border:none
 }
 
-@media (max-width: 768px) {
+@media (max-width: 76.8rem) {
     .subheader{
         visibility: visible;
         
@@ -37,5 +44,16 @@
         display:flex;
         flex-direction: column-reverse;
         
+    }
+    
+    .hero-container{
+        margin: -5.9rem 4rem 0;
+        height: -1vh;
+        width: 80vw !important;
+    }
+    .hero-image {
+        padding: 0 ;
+        width: 100%;
+        height:17rem;
     }
 }
