--- a/src/Scss/Liabrary/_productCard.scss
+++ b/src/Scss/Liabrary/_productCard.scss
@@ -1,6 +1,6 @@
 .card {
-    padding-bottom: 2rem;
-    
+    // padding-bottom: 2rem;
+    padding: 2rem;
 
     &:not(:nth-child(3n)) {
         padding-right: 1.5rem;
@@ -12,8 +12,9 @@
 
     .product-image img {
         width: 100%;
-        height: 38.2rem;
-
+        height: 30.2rem;
+        border: 1px solid $col-Gray;
+        padding: 1.5rem;
 
     }
 
@@ -45,30 +46,57 @@
     .fav-icon {
         width: 100%;
     }
-    
+
 
 }
-.pagination{
+
+.pagination {
     list-style-type: none;
-      display: inline-flex;
-      
-      ul li{
-          padding: 1rem;
-          color: black;
-      }
-  }
+    display: inline-flex;
+    justify-content: center;
+    padding-bottom: 1rem;
+
+    ul li a {
+        padding: 1rem;
+        color: $col-black;
+        font-size: 1.7rem;
+    }
+}
 
 .container .card-container {
     padding-top: 2.4rem;
-   
-    .body-container{
-        font-size:1.6rem;
+
+    .body-container {
+        font-size: 1.6rem;
         padding-bottom: 2.6rem;
     }
-    
+
 }
-@media (min-width: 320px) and (max-width: 767px){
-    .pagination{
+
+.filter-body {
+    display: none;
+    p {
+        text-align: left;
+        font: normal normal normal 1.6rem/2.4rem Muli;
+        padding: .6rem;
+    }
+    .product-count{
+        text-align: center;
+    }
+
+    .Filter {
+        display: inline-flex;
+        text-align: center;
+        p{padding: 2.5rem;}
+        
+    }
+}
+
+@media (min-width: 320px) and (max-width: 767px) {
+    .body-container {
         display: none;
+    }
+    .filter-body{
+        display:block;
     }
 }
